update note option to string type
