# server/internal/pkg/entities/note.go
@@ -1,14 +1,9 @@
 package entities
 
-type Bound int
-
-const (
-	SpringBound Bound = iota
-	BasicBound
-)
+type NoteType string
 
 type Note struct {
-	Bound      Bound
+	NoteType   NoteType
 	NoteColor  string
 	BoundColor string
 }
@@ -17,7 +12,7 @@ var (
 	defaultColour = "#22659A"
 )
 
-func NewNote(bound Bound, noteColourParam, bounColourParam string) *Note {
+func NewNote(noteType NoteType, noteColourParam, bounColourParam string) *Note {
 	if noteColourParam == "" {
 		noteColourParam = defaultColour
 	}
@@ -27,19 +22,8 @@ func NewNote(bound Bound, noteColourParam, bounColourParam string) *Note {
 	}
 
 	return &Note{
-		Bound:      bound,
+		NoteType:   noteType,
 		NoteColor:  noteColourParam,
 		BoundColor: bounColourParam,
-	}
-}
-
-func (b Bound) String() string {
-	switch b {
-	case SpringBound:
-		return "SpringNote"
-	case BasicBound:
-		return "BasicNote"
-	default:
-		return "BasicNote"
 	}
 }
